# SimpleLogger

./: CMakeLists.txt  README.md
Headers/: Logger.h
Sources/: Logger.cpp
Tests/: CMakeLists.txt  SimpleLogTests.cpp
